feat: add party horn and fix styling

--- a/src/happy-birthday-button/cake.pug
+++ b/src/happy-birthday-button/cake.pug
@@ -1,20 +1,18 @@
 svg.birthday-button__cake(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 76.609 47.643')
   defs
     g#candle(transform='translate(-48.82 -137.74)')
-      rect(ry='.567' y='147.888' x='72.548' height='12.001' width='4.252' fill='#ececec')
+      rect.candle__stick(ry='.567' y='147.888' x='72.548' height='12.001' width='4.252' )
       g.candle__flame
-        path.candle__flame-outer(d='M75.672 145.92c.608 1.207.086 2.224-.749 2.224s-1.512-.037-1.512-1.388.558-3.566 1.98-3.973c1.007-.288-.855.884.281 3.138z' fill='#f60')
-        path.candle__flame-inner(d='M75.081 146.449c.41.51.266 1.043-.13 1.128-.394.084-.682-.228-.822-.866 0 0-.13-1.382.502-1.719.447-.238-.315.505.45 1.457z' fill='#ff0')
+        path.candle__flame-outer(d='M75.672 145.92c.608 1.207.086 2.224-.749 2.224s-1.512-.037-1.512-1.388.558-3.566 1.98-3.973c1.007-.288-.855.884.281 3.138z')
+        path.candle__flame-inner(d='M75.081 146.449c.41.51.266 1.043-.13 1.128-.394.084-.682-.228-.822-.866 0 0-.13-1.382.502-1.719.447-.238-.315.505.45 1.457z')
       g(style='display: none')
-        path#flame-outer(d='M73.676 145.92c-.609 1.207-.086 2.224.749 2.224s1.511-.037 1.511-1.388-.557-3.566-1.98-3.973c-1.006-.288.856.884-.28 3.138z' fill='#f60')
-        path#flame-inner(d='M74.267 146.449c-.41.51-.266 1.043.129 1.128.395.084.683-.228.823-.866 0 0 .13-1.382-.502-1.719-.447-.238.315.505-.45 1.457z' fill='#ff0')
+        path#flame-outer(d='M73.676 145.92c-.609 1.207-.086 2.224.749 2.224s1.511-.037 1.511-1.388-.557-3.566-1.98-3.973c-1.006-.288.856.884-.28 3.138z')
+        path#flame-inner(d='M74.267 146.449c-.41.51-.266 1.043.129 1.128.395.084.683-.228.823-.866 0 0 .13-1.382-.502-1.719-.447-.238.315.505-.45 1.457z')
     clipPath#face-clip
       rect(transform='translate(-48.82 -138.799)' width='63.5' height='26.458' x='55.374' y='159.984' ry='3.402')
     clipPath#sprinkle-clip
       rect(width='63.5' height='26.458' x='55.374' y='159.984' ry='3.402')
     clipPath#frosting-clip
-      //- Frosting clip
-      //- path(d='M58.311 159.194c-1.915 0-3.354 2.034-3.986 3.744-.57 1.537-.953 4.189.529 4.888 1.454.687 2.425-2.645 4.034-2.645 1.608 0 2.425 2.645 4.033 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.425-2.645 4.033-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.425-2.645 4.033-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.436-2.83 4.034-2.645 1.936.222 2.084 4.233 4.033 4.233 1.95 0 2.098-4.01 4.034-4.233 1.598-.184 2.426 2.645 4.034 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.58 3.332 4.033 2.645 1.482-.7 1.098-3.35.53-4.888-.633-1.71-2.072-3.744-3.987-3.744z')
       path(d='m 58.311339,159.19367 c -1.915439,0 -3.331523,2.04311 -3.986711,3.74446 -0.778328,2.02111 -0.761971,4.73695 0.529167,6.47582 0.861406,1.16012 2.614079,1.3182 4.033715,1.5875 1.321013,0.25059 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344571,0 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344571,0 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344573,0 2.689143,0 4.033713,0 1.34457,0 2.68915,0 4.03372,0 1.34457,0 2.68914,0 4.03371,0 1.34457,0 2.71271,0.25059 4.03372,0 1.41963,-0.2693 3.17231,-0.42738 4.03371,-1.5875 1.29114,-1.73887 1.3075,-4.45471 0.52917,-6.47582 -0.65519,-1.70135 -2.07128,-3.74446 -3.98672,-3.74446 z' style='fill:#ff0041;fill-opacity:0.53424659;fill-rule:nonzero;stroke:none;stroke-width:0.90433162;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1')
     g#sprinkles(transform='translate(63.93)')
       rect.cake__sprinkle(transform='rotate(-44.064)' ry='.567' y='167.592' x='-91.837' height='1.228' width='3.307')
@@ -34,16 +32,7 @@ svg.birthday-button__cake(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http:/
       rect.cake__sprinkle(transform='rotate(45)' ry='.567' y='133.647' x='124.293' height='1.228' width='3.307')
     path#frosting(d='M58.311 159.194c-1.915 0-3.283-.087-3.986 1.098-.392.661-.073 1.766.529 2.243 1.054.834 2.689 0 4.034 0H115.36c1.344 0 2.979.834 4.033 0 .602-.477.921-1.582.53-2.243-.703-1.185-2.072-1.098-3.987-1.098z')
     path.cake__frosting.cake__frosting--end(d='M58.311 159.194c-1.915 0-3.354 2.034-3.986 3.744-.57 1.537-.953 4.189.529 4.888 1.454.687 2.425-2.645 4.034-2.645 1.608 0 2.425 2.645 4.033 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.425-2.645 4.033-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.425-2.645 4.033-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.436-2.83 4.034-2.645 1.936.222 2.084 4.233 4.033 4.233 1.95 0 2.098-4.01 4.034-4.233 1.598-.184 2.426 2.645 4.034 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.58 3.332 4.033 2.645 1.482-.7 1.098-3.35.53-4.888-.633-1.71-2.072-3.744-3.987-3.744z' )
-  //- g(transform='translate(-45.04 -107.238)')
-  //-   rect(ry='3.402' y='128.423' x='51.594' height='26.458' width='63.5' fill='#0ff')
-  //-   text(y='138.566' x='83.054' style="line-height:1.25;-inkscape-font-specification:'sans-serif, Bold';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:center" font-weight='700' font-size='8.467' font-family='sans-serif' letter-spacing='0' word-spacing='0' text-anchor='middle' stroke-width='.265')
-  //-     tspan(style="-inkscape-font-specification:'sans-serif, Bold';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:center" y='138.566' x='83.054') Happy
-  //-     tspan(style="-inkscape-font-specification:'sans-serif, Bold';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:center" y='149.149' x='83.054') Birthday
-  //- g.cake-decoration.birthday-button__biscuit-base(transform='translate(-48.82 -138.799)')
-  //-   rect(ry='3.402' y='159.984' x='55.374' height='26.458' width='63.5' fill='#0ff')
-  //-   path.cake-decoration__biscuit-base(d='M55.373 182.341v.699a3.394 3.394 0 003.402 3.402h56.697a3.394 3.394 0 003.401-3.402v-.699z')
   g.cake-decoration(transform='translate(-48.82 -138.799)')
-    //- rect(width='63.5' height='26.458' x='55.374' y='159.984' ry='3.402' fill='#0ff')
     g.cake__frosting-group(clip-path="url(#frosting-clip)")
       g.cake__frosting.cake__frosting--start
         use(xlink:href="#frosting")
@@ -68,8 +57,8 @@ svg.birthday-button__cake(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http:/
         path.cake__mouth-opening(d='M83.607 174.436a3.652 3.652 0 003.518 2.674 3.652 3.652 0 003.515-2.674z' stroke-width='1.1801650499999998' stroke-linecap='round' stroke-linejoin='round')
         path.cake__tongue(d='M88.836 175.492a3.113 2.329 0 00-2.869 1.425 3.652 3.652 0 001.158.192 3.652 3.652 0 002.899-1.44 3.113 2.329 0 00-1.188-.177z')
     g.cake__face--straining(transform='translate(-48.82 -138.799)')
-      path(d='M100.673 173.886l-5.248-2.073 5.713-1.466M73.574 173.886l5.248-2.073-5.713-1.466' fill='none' stroke='#000' stroke-width='1.01590816' stroke-linecap='round' stroke-linejoin='round')
-      path(d='M85.016 175.773h4.216' fill='none' stroke='#000' stroke-width='.86683468' stroke-linecap='round')
+      path.face__stroke(d='M100.673 173.886l-5.248-2.073 5.713-1.466M73.574 173.886l5.248-2.073-5.713-1.466' fill='none' stroke-width='1.01590816' stroke-linecap='round' stroke-linejoin='round')
+      path.face__stroke(d='M85.016 175.773h4.216' fill='none' stroke-width='.86683468' stroke-linecap='round')
   g.cake__candles
     g.cake__candle
       use(xlink:href="#candle")
@@ -77,31 +66,3 @@ svg.birthday-button__cake(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http:/
       use(xlink:href="#candle" transform='translate(25 0)')
     g.cake__candle
       use(xlink:href="#candle" transform='translate(12 0)')
-    //- g.cake__candle(transform='translate(-48.82 -137.74)')
-    //-   rect(ry='.567' y='147.888' x='72.548' height='12.001' width='4.252' fill='#ececec')
-    //-   g.candle__flame
-    //-     path.candle__flame-outer(d='M75.672 145.92c.608 1.207.086 2.224-.749 2.224s-1.512-.037-1.512-1.388.558-3.566 1.98-3.973c1.007-.288-.855.884.281 3.138z' fill='#f60')
-    //-     path.candle__flame-inner(d='M75.081 146.449c.41.51.266 1.043-.13 1.128-.394.084-.682-.228-.822-.866 0 0-.13-1.382.502-1.719.447-.238-.315.505.45 1.457z' fill='#ff0')
-    //-   g
-    //-     path(d='M73.676 145.92c-.609 1.207-.086 2.224.749 2.224s1.511-.037 1.511-1.388-.557-3.566-1.98-3.973c-1.006-.288.856.884-.28 3.138z' fill='#f60')
-    //-     path(d='M74.267 146.449c-.41.51-.266 1.043.129 1.128.395.084.683-.228.823-.866 0 0 .13-1.382-.502-1.719-.447-.238.315.505-.45 1.457z' fill='#ff0')
-    //- g.cake__candle(transform='translate(-48.82 -137.74)')
-    //-   //- path(d='M101.085 146.5c0 1.351-.677 1.388-1.512 1.388s-1.512-.037-1.512-1.388c0-1.35.677-3.504 1.512-3.504s1.512 2.153 1.512 3.504z' fill='#f60')
-    //-   //- path(d='M100.275 146.715c0 .627-.314.644-.702.644-.387 0-.702-.017-.702-.644s.315-1.626.702-1.626c.388 0 .702 1 .702 1.626z' fill='#ff0')
-    //-   rect(width='4.252' height='12.001' x='97.447' y='147.888' ry='.567' fill='#ececec' fill-opacity='.982')
-    //-   g.candle__flame
-    //-     path.candle__flame-outer(d='M100.571 145.92c.609 1.207.086 2.224-.749 2.224s-1.511-.037-1.511-1.388.557-3.566 1.98-3.973c1.006-.288-.856.884.28 3.138z' fill='#f60')
-    //-     path.candle__flame-inner(d='M99.98 146.449c.41.51.266 1.043-.129 1.128-.395.084-.683-.228-.823-.866 0 0-.13-1.382.502-1.719.448-.238-.315.505.45 1.457z' fill='#ff0')
-    //-   g
-    //-     path(d='M98.575 145.92c-.608 1.207-.086 2.224.749 2.224s1.512-.037 1.512-1.388-.558-3.566-1.98-3.973c-1.007-.288.855.884-.281 3.138z' fill='#f60')
-    //-     path(d='M99.166 146.449c-.41.51-.266 1.043.13 1.128.394.084.682-.228.822-.866 0 0 .13-1.382-.502-1.719-.447-.238.315.505-.45 1.457z' fill='#ff0')
-    //- g.cake__candle(transform='translate(-48.82 -137.74)')
-    //-   path(d='M88.635 146.5c0 1.351-.676 1.388-1.511 1.388-.835 0-1.512-.037-1.512-1.388 0-1.35.677-3.504 1.512-3.504s1.511 2.153 1.511 3.504z' fill='#f60')
-    //-   path(d='M87.825 146.715c0 .627-.314.644-.701.644-.388 0-.702-.017-.702-.644s.314-1.626.702-1.626c.387 0 .701 1 .701 1.626z' fill='#ff0')
-    //-   rect(width='4.252' height='12.001' x='84.997' y='147.888' ry='.567' fill='#ececec')
-    //-   g
-    //-     path(d='M88.122 145.92c.608 1.207.086 2.224-.75 2.224-.834 0-1.511-.037-1.511-1.388s.557-3.566 1.98-3.973c1.007-.288-.855.884.28 3.138z' fill='#f60')
-    //-     path(d='M87.53 146.449c.41.51.267 1.043-.129 1.128-.395.084-.682-.228-.822-.866 0 0-.13-1.382.501-1.719.448-.238-.315.505.45 1.457z' fill='#ff0')
-    //-   g
-    //-     path(d='M86.125 145.92c-.608 1.207-.086 2.224.75 2.224.834 0 1.511-.037 1.511-1.388s-.557-3.566-1.98-3.973c-1.007-.288.855.884-.28 3.138z' fill='#f60')
-    //-     path(d='M86.716 146.449c-.41.51-.266 1.043.13 1.128.395.084.682-.228.822-.866 0 0 .13-1.382-.501-1.719-.448-.238.315.505-.45 1.457z' fill='#ff0')
