feat: port all controls to dat.gui drawer

--- a/src/pixelator/style.styl
+++ b/src/pixelator/style.styl
@@ -4,3 +4,8 @@
 body
   color #111
   touch-action none
+
+.dg .closed .color-palette
+.dg .closed .snapshot-gallery
+  height 0 !important
+  overflow hidden
