feat: pixelator first pass

--- a/src/pixelator/style.styl
+++ b/src/pixelator/style.styl
@@ -1,5 +1,6 @@
 *
   box-sizing border-box
+  touch-action none
 
 body
   color #111
@@ -11,6 +12,12 @@ body
 .dg .closed .snapshot-gallery
   height 0 !important
   overflow hidden
+
+.dg .closed .help-list li
+  margin 0
+
+.dg .closed .help-list
+  padding 0
 
 #app
   height 100vh
