feat: update border-radius playground

--- a/src/border-radius-playground/style.styl
+++ b/src/border-radius-playground/style.styl
@@ -1,26 +1,22 @@
-* {
-  box-sizing: border-box;
-}
-body {
-  min-height: 100vh;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-          justify-content: center;
-  flex-direction: column;
-}
-.box {
-  height: calc(var(--height, 50) * 1vmin);
-  width: calc(var(--width, 50) * 1vmin);
-  background: #a0f;
-  border: 10px solid #000;
-  border-radius: calc(var(--htl, 0) * 1%) calc(var(--htr, 0) * 1%) calc(var(--hbr, 0) * 1%) calc(var(--hbl, 0) * 1%) / calc(var(--vtl, 0) * 1%) calc(var(--vtr, 0) * 1%) calc(var(--vbr, 0) * 1%) calc(var(--vbl, 0) * 1%);
-}
+*
+  box-sizing border-box
 
-.output {
-  font-family: 'sans-serif';
-  margin-top: 1rem;
-  font-weight: bold;
-}
+body
+  min-height 100vh
+  display flex
+  align-items center
+  justify-content center
+  flex-direction column
+
+.box
+  height calc(var(--height, 50) * 1vmin)
+  width calc(var(--width, 50) * 1vmin)
+  background #a0f
+  border 10px solid #000
+  border-radius 'calc(%s * 1%) calc(%s * 1%) calc(%s * 1%) calc(%s * 1%) / calc(%s * 1%) calc(%s * 1%) calc(%s * 1%) calc(%s * 1%)' % (var(--htl) var(--htr) var(--hbr) var(--hbl) var(--vtl) var(--vtr) var(--vbr) var(--vbl))
+
+.output
+  font-family sans-serif
+  margin-top 1rem
+  font-weight bold
+
