--- a/src/clipped-images/style.styl
+++ b/src/clipped-images/style.styl
@@ -7,32 +7,31 @@ body
   align-items center
   justify-content center
 
-
 .image-container
   display grid
-  grid-template-columns repeat(5, 1fr)
-  grid-template-rows repeat(5, 1fr)
+  grid-template-columns repeat(3, 1fr)
+  grid-template-rows repeat(3, 1fr)
+  width 600px
   grid-gap 0.5rem
 
   .image
-    object-fit cover
-    height 100px
-    width 100px
     position relative
+    padding-bottom 100%
 
-    &:before
-      background var(--src)
-      content ''
-      filter grayscale(1) brightness(40%)
+    img
       height 100%
+      width 100%
+      object-fit cover
       left 0
       position absolute
       top 0
-      width 100%
 
-    img
+    img:nth-of-type(1)
+      filter grayscale(1) brightness(40%)
+
+    img:nth-of-type(2)
       clip-path var(--clip-start)
       transition clip-path 0.5s
 
-    &:hover img
+    &:hover img:nth-of-type(2)
       clip-path var(--clip-end)
