--- a/src/ship-it/style.styl
+++ b/src/ship-it/style.styl
@@ -1,22 +1,31 @@
 *
   box-sizing border-box
-
+:root
+  --bg-hue 260
 body
   min-height 100vh
   display flex
   align-items center
   justify-content center
   overflow hidden
-  background hsl(280, 40%, 70%)
+  background 'hsl(%s, 40%, 70%)' % var(--bg-hue)
 
-svg
-  height 25vmin
+.btn-txt
+  position absolute
+  left 50%
+  top 50%
+  transform translate(-50%, -50%)
+  width 100%
+
+  &--shipped
+    -webkit-clip-path inset(0 0 -5% 0)
+    clip-path inset(0 0 -5% 0)
 
 .ship-it
   width 240px
   height 100px
+  opacity 0
   position relative
-  background hsla(0, 100%, 50%, 0.2)
 
   svg
     position absolute
@@ -32,7 +41,28 @@ svg
     transform translate(-50%, 0)
     width 240px
     height 100px
+    background 'hsla(%s, 65%, %s, %s)' % (var(--h, 115) calc(var(--l, 50) * 1%) var(--a, 1))
+    color hsl(0, 0%, 100%)
+    font-weight bold
+    outline transparent
+    font-size 2rem
+    font-family sans-serif
+    cursor pointer
+    border-radius 6px
+    padding 0
+    border 0
+    margin 0
+    box-shadow '1px 4px 10px 0 hsla(%s, 53%, 6%, %s)' % (var(--h, 116) calc(var(--a) * 0.5))
 
+    &:not(.busy):hover
+      --l 60
+
+    &:not(.busy):active
+      --l 40
+
+.word
+.char
+  display inline-block
 
 .blank
   --lightness 70
@@ -58,14 +88,20 @@ svg
     stroke-width 0.5
 
 .wave
-  fill 'hsl(%s, 80%, 50%)' % var(--hue, 180)
+  fill 'hsla(%s, 80%, 50%, 0.75)' % var(--hue, 180)
+
+.boat__logo
+  opacity 0.65
+
+.boat__name
+  fill hsla(0, 0%, 15%, 0.75)
 
 .hazard-black
   fill hsl(0, 0%, 5%)
 .hazard-yellow
   fill hsl(50, 90%, 50%)
 .corgo-stamp
-  fill hsl(0, 0%, 100%)
+  fill hsla(0, 0%, 100%, 0.75)
 
 .container__logo
   opacity 0.5
@@ -83,7 +119,7 @@ svg
   fill hsl(0, 0%, 65%)
 
 .boat__glass
-  fill hsl(180, 80%, 60%)
+  fill hsl(180, 40%, 60%)
 .boat__shimmer
   fill hsla(180, 80%, 100%, 0.75)
 
@@ -93,6 +129,12 @@ svg
 .boat__mouth--open
   fill hsl(0, 0%, 10%)
 
+.boat__bottom
+  fill hsl(0, 0, 15%)
+
+.boat__stripe
+  fill hsl(0, 60%, 50%)
+
 .boat__eye
   circle:nth-of-type(2)
     fill hsl(0, 0%, 100%)
@@ -101,3 +143,35 @@ svg
 
 .boat__bubble
   fill 'hsla(0, 0%, %s, 0.75)' % calc(var(--lightness, 60) * 1%)
+
+label
+  height 44px
+  width 44px
+  position fixed
+  bottom 1rem
+  right 1rem
+  cursor pointer
+
+  & > svg
+    position absolute
+    height 100%
+    width 100%
+    top 0
+    left 0
+
+  path
+    fill 'hsl(%s, 63%, 67%)' % var(--bg-hue)
+
+  svg:nth-of-type(1)
+    display none
+
+[type='checkbox']
+  // opacity 0
+  height 0
+  width 0
+
+:checked ~ label
+  svg:nth-of-type(1)
+    display block
+  svg:nth-of-type(2)
+    display none
